--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.start",
+	"stop": "node ./bin/www.stop"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
