--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www.start",
-	"stop": "node ./bin/www.stop"
+    "stop": "node ./bin/www.stop"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^1.7.3"
   }
 }
